<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center|top"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/categoria"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtCodigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cod_articulo"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nombre_articulo"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cant_articulo"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtPre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="$"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/precio_articulo"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressList"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:visibility="gone"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:id="@+id/imgArticulo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>