<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".vista.fragments.DetailFragment">

    <LinearLayout
        android:id="@+id/LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgProductoUpd"
            android:layout_width="500dp"
            android:layout_height="500dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_image_black_24dp" />

        <EditText
            android:id="@+id/etCodigoUpd"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/cod_articulo"
            android:inputType="textCapCharacters"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etNombreUpd"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/nombre_articulo"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etCantidadUpd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/cant_articulo"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etPrecioUpd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/precio_articulo"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/spnCategoriaUpd"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center" />

        <ProgressBar
            android:id="@+id/progressUpd"
            style="?android:attr/progressBarStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center|bottom"
            android:text="Actualizar"
            android:textSize="20sp"
            android:background="@drawable/curve_button"/>

    </LinearLayout>


</FrameLayout>

