<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.Detail.DetailProductView">

    <LinearLayout
        android:id="@+id/LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/progressAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="DETALLE DEL ARTICULO"
            android:textAlignment="center"
            android:textSize="29sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgProducto"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_image_black_24dp" />

        <EditText
            android:id="@+id/etCodigo"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/cod_articulo"
            android:inputType="textCapCharacters"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/nombre_articulo"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/cant_articulo"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/precio_articulo"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/spnCategoria"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressAdd"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LL" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="AGREGAR ARTICULO"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressAdd"
        android:background="@drawable/curve_button" />


</androidx.constraintlayout.widget.ConstraintLayout>